@@ -87,8 +87,8 @@ public class ImsExpanderSubTask extends AbstractTask {
     this.customNoiseLevel = parameters.getParameter(ImsExpanderParameters.useRawData)
         .getEmbeddedParameter().getValue();
     traceMzRange = expandingTraces.size() > 0 ? Range.closed(
-        expandingTraces.get(0).getMzRange().lowerEndpoint(),
-        expandingTraces.get(expandingTraces.size() - 1).getMzRange().upperEndpoint())
+        expandingTraces.getFirst().getMzRange().lowerEndpoint(),
+        expandingTraces.getLast().getMzRange().upperEndpoint())
         : Range.singleton(0d);
 
     totalFrames = frames.size();
@@ -114,7 +114,7 @@ public class ImsExpanderSubTask extends AbstractTask {
         + createdRows / (double) expandingTraces.size() * 0.5;
   }
 
-  // does not work, but why?
+  @Override
   public void run() {
     setStatus(TaskStatus.PROCESSING);
     logger.finest("Initialising data access for file " + imsFile.getName());
@@ -164,10 +164,9 @@ public class ImsExpanderSubTask extends AbstractTask {
                 break;
               }
 
-              // this assumes that the range width at a similar m/z is also of almost equal width.
-              // e.g. a feature with m/z 600 and a feature with m/z 601:
-              // the range of the feature at m/z 600 may not be wider than the range of the feature at m/z 601
-              if (traceMzRange.upperEndpoint() < mz) {
+              // increment the counter if the current mz is past the width of the first trace,
+              // then we do not need to consider it for the next traces
+              if (traceMzRange.upperEndpoint() < mz && traceIndex == firstTraceIndex) {
                 firstTraceIndex++;
                 continue;
               }
@@ -185,10 +184,7 @@ public class ImsExpanderSubTask extends AbstractTask {
     } catch (MissingMassListException e) {
       // allow traces to be released
       expandingTraces = null;
-      e.printStackTrace();
-      logger.log(Level.WARNING, e.getMessage(), e);
-      setErrorMessage(e.getMessage());
-      setStatus(TaskStatus.ERROR);
+      error("Error in IMS expander", e);
       return;
     }
 
@@ -213,114 +209,6 @@ public class ImsExpanderSubTask extends AbstractTask {
 
     // allow traces to be released
     expandingTraces = null;
-
-    setStatus(TaskStatus.FINISHED);
-  }
-
-  // works but 5 times slower
-  //  @Override
-  public void run2() {
-    setStatus(TaskStatus.PROCESSING);
-    logger.finest("Initialising data access for file " + imsFile.getName());
-    final MobilityScanDataAccess access = new MobilityScanDataAccess(imsFile,
-        useRawData ? MobilityScanDataType.RAW : MobilityScanDataType.MASS_LIST, frames);
-
-    final NumberFormat mzFormat = MZmineCore.getConfiguration().getMZFormat();
-
-    final int numTraces = expandingTraces.size();
-    try {
-
-      for (int i = 0; i < access.getNumberOfScans(); i++) {
-        if (isCanceled()) {
-          // allow traces to be released
-          expandingTraces = null;
-          return;
-        }
-
-        final Frame frame = access.nextFrame();
-
-        while (access.hasNextMobilityScan()) {
-          final MobilityScan mobilityScan = access.nextMobilityScan();
-
-          if (access.getNumberOfDataPoints() == 0) {
-            continue;
-          }
-
-          // since traces are sorted by lower mz range, we only need to search for a data point for
-          // the next trace between the start index taht was found for the last trace and the max
-          // number of data points
-          int lastStartIndex = 0;
-          for (int traceIndex = 0; traceIndex < numTraces; traceIndex++) {
-            final Range<Double> traceMzRange = expandingTraces.get(traceIndex).getMzRange();
-            // jump to the closest data point of the trace for each mobility scan
-            final double lowerMz = traceMzRange.lowerEndpoint();
-            final int start = access.binarySearch(lowerMz, DefaultTo.CLOSEST_VALUE, lastStartIndex,
-                access.getNumberOfDataPoints());
-            if (start == -1) {
-//               traces are sorted by lower mz, if no data point was found that is greater than the
-//               current lower mz bound, we can break and go to the next mobility scan
-              break;
-            }
-            lastStartIndex = start;
-
-            for (int dpIndex = start; dpIndex < access.getNumberOfDataPoints(); dpIndex++) {
-              final double mz = access.getMzValue(dpIndex);
-              final double intensity = access.getIntensityValue(dpIndex);
-
-              // if the trace upper mz is smaller than the current mz, we break and go to the next trace
-              if (traceMzRange.upperEndpoint() < mz) {
-                break;
-              }
-
-              if (useRawData && intensity < customNoiseLevel) {
-                continue;
-              }
-
-              if (traceMzRange.contains(mz)) {
-                expandingTraces.get(traceIndex).offerDataPoint(access, dpIndex);
-              }
-            }
-          }
-        }
-        processedFrames.getAndIncrement();
-
-        desc = flist.getName() + ": expanding traces for frame " + processedFrames.get() + "/"
-            + totalFrames + " m/z range: " + RangeUtils.formatRange(traceMzRange, mzFormat);
-      }
-    } catch (MissingMassListException e) {
-      // allow traces to be released
-      expandingTraces = null;
-      e.printStackTrace();
-      logger.log(Level.WARNING, e.getMessage(), e);
-      setErrorMessage(e.getMessage());
-      setStatus(TaskStatus.ERROR);
-    }
-
-    for (var expandingTrace : expandingTraces) {
-      desc = "Creating new features " + createdRows + "/" + expandingTraces.size();
-
-      if (expandingTrace.getNumberOfMobilityScans() > 1) {
-        final IonMobilogramTimeSeries series = expandingTrace.toIonMobilogramTimeSeries(
-            getMemoryMapStorage(), mobilogramDataAccess);
-        expandedTraces.add(new ExpandedTrace(series, expandingTrace.getRow(),
-            expandingTrace.getRow().getFeature(imsFile)));
-      }
-
-      createdRows++;
-
-      if (isCanceled()) {
-        // allow traces to be released
-        expandingTraces = null;
-        return;
-      }
-    }
-
-    // allow traces to be released
-    expandingTraces = null;
-
-//    synchronized (newFlist) {
-//      newRows.forEach(newFlist::addRow);
-//    }
 
     setStatus(TaskStatus.FINISHED);
   }
